core game mechanics implementation

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 
 <body>
   <div id="root" />
-  <script src="common.bundle.js"></script>
   <script src="index.bundle.js"></script>
+  <canvas id="canvas" width="1024" height="768">
+  </canvas>
 </body>
 
 </html>
