--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <div id="root" />
+  <img id="logo" src="logo.png" style="display:none" />
   <script src="index.bundle.js"></script>
   <canvas id="canvas" width="1024" height="768">
   </canvas>
