--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
 
 <body>
   <div id="root" />
-  <img id="logo" src="logo.png" style="display:none" />
+  <img id="logo" src="./img/logo.png" style="display:none" />
+  <img id="cogs" src="./img/cogs.svg" style="display:none" />
+  <img id="cogs-hover" src="./img/cogs-hover.svg" style="display:none" />
+  <img id="redo" src="./img/redo.svg" style="display:none" />
+  <img id="redo-hover" src="./img/redo-hover.svg" style="display:none" />
   <script src="index.bundle.js"></script>
   <canvas id="canvas" width="1024" height="768">
   </canvas>
