add sign out image

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <img id="cogs-hover" src="./img/cogs-hover.svg" style="display:none" />
   <img id="redo" src="./img/redo.svg" style="display:none" />
   <img id="redo-hover" src="./img/redo-hover.svg" style="display:none" />
+  <img id="sign-out" src="./img/sign-out.svg" style="display:none" />
+  <img id="sign-out-hover" src="./img/sign-out-hover.svg" style="display:none" />
   <script src="index.bundle.js"></script>
   <canvas id="canvas" width="1024" height="768">
   </canvas>
