add Settings Page

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Galcon</title>
+  <script type='text/javascript' src='src/canvasinput.js'></script>
 </head>
 
 <body>
@@ -16,8 +17,7 @@
   <img id="sign-out" src="./img/sign-out.svg" style="display:none" />
   <img id="sign-out-hover" src="./img/sign-out-hover.svg" style="display:none" />
   <script src="index.bundle.js"></script>
-  <canvas id="canvas" width="1024" height="768">
-  </canvas>
+  <canvas id="canvas" width="1024" height="768"></canvas>
 </body>
 
 </html>
